# Amit_python_hospital_project

./: .env  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
.streamlit/: config.toml
src/config/: settings.py
src/database/: connection.py  init_db.py
src/database/repositories/: department_repository.py  hospital_repository.py  patient_repository.py  staff_repository.py
src/models/: department.py  hospital.py  patient.py  person.py  staff.py
src/utils/: logger.py
streamlit_app/: app.py  config.py  utils.py
streamlit_app/pages/: __init__.py  add_patient.py  dashboard.py  manage_departments.py  manage_hospitals.py  manage_staff.py  search_patient.py  settings.py
